<resources>
    <string name="app_name">Friendominder</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number">Phone number:</string>
    <string name="contact_name">TextView</string>
    <string name="contact_number">TextView</string>
    <string name="no_geofence_set_for_this_group">no geofence set for this group</string>
    <string name="geofence">Geofence:</string>
    <string name="members">Members</string>
    <string name="groupname">GroupName</string>
    <string name="add_geofence">ADD GEOFENCE</string>
    <string name="add_member">ADD MEMBER</string>
    <string name="done">DONE</string>
    <string name="Anonymous">Anonymous</string>
    <string name="addMembers">Add members to group</string>
    <string name="update">update</string>
    <string name="members2">Members:</string>
    <string name="reminders">Reminders:</string>
    <string name="geofences">Geofences:</string>
    <string name="group_name">Group Name</string>
    <string name="loginScreen1">Stay in touch with friends and family</string>
    <string name="friendominder">Friendominder</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_without_google">Sign in without Google</string>
    <string name="contact_name1">Contact Name</string>
    <string name="telefonnnummer">Telefonnummer</string>
    <string name="add_new_reminder">Add new reminder</string>
    <string name="add_interval_here">  Add interval here…</string>
    <string name="add_name_here">  Add name here…</string>
    <string name="add_latitude_here">Add latitude here...</string>
    <string name="add_longitude_here">Add longitude here...</string>
    <string name="add_radius_here">Add radius here...</string>

</resources>